<resources>
    <string name="app_name">Электронная очередь</string>
    <string name="hour_hint">Часов</string>
    <string name="minute_hint">Минут</string>
    <string name="get_ticket_tab">Получить талон</string>
    <string name="ticket_list_tab">Список талонов</string>
    <string name="get_ticket">Получить талон</string>
    <string-array name="hours">
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>
    <string-array name="minutes">
        <item>00</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
</resources>